--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,24 +3,24 @@ packages:
 
 overrides:
   '@eslint-community/eslint-utils': ^4.9.0
-  '@typescript-eslint/utils': ^8.43.0
-  eslint: ^9.35.0
+  '@typescript-eslint/utils': ^8.44.1
+  eslint: ^9.36.0
   tsx: ^4.20.5
 
 catalogs:
   dev:
-    '@antfu/ni': ^25.0.0
+    '@antfu/ni': ^26.0.1
     '@eslint-types/typescript-eslint': ^7.5.0
     '@eslint-types/unicorn': ^52.0.0
-    '@eslint/config-inspector': ^1.2.0
+    '@eslint/config-inspector': ^1.3.0
     '@stylistic/eslint-plugin-migrate': ^4.4.1
-    '@types/node': ^24.3.1
-    '@types/react': ^19.1.12
+    '@types/node': ^24.5.2
+    '@types/react': ^19.1.13
     bumpp: ^10.2.3
     eslint-typegen: ^2.3.0
     esno: ^4.8.0
     execa: ^9.6.0
-    lint-staged: ^16.1.6
+    lint-staged: ^16.2.0
     prettier: ^3.6.2
     react: ^19.1.1
     simple-git-hooks: ^2.13.1
@@ -30,45 +30,45 @@ catalogs:
     tsdown: ^0.14.2
     typescript: ^5.9.2
   peer:
-    '@eslint-react/eslint-plugin': ^1.53.0
-    '@next/eslint-plugin-next': ^15.5.2
+    '@eslint-react/eslint-plugin': ^1.53.1
+    '@next/eslint-plugin-next': ^15.5.4
     '@prettier/plugin-xml': ^3.4.2
-    '@unocss/eslint-plugin': ^66.5.1
-    eslint: ^9.35.0
-    eslint-plugin-format: ^1.0.1
+    '@unocss/eslint-plugin': ^66.5.2
+    eslint: ^9.36.0
+    eslint-plugin-format: ^1.0.2
     eslint-plugin-react-hooks: ^5.2.0
-    eslint-plugin-react-refresh: ^0.4.20
-    vue: ^3.5.21
+    eslint-plugin-react-refresh: ^0.4.21
+    vue: ^3.5.22
   prod:
     '@antfu/install-pkg': ^1.1.0
     '@clack/prompts': ^0.11.0
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
-    '@eslint/markdown': ^7.2.0
-    '@stylistic/eslint-plugin': ^5.3.1
-    '@typescript-eslint/eslint-plugin': ^8.43.0
-    '@typescript-eslint/parser': ^8.43.0
-    '@vitest/eslint-plugin': ^1.3.9
+    '@eslint/markdown': ^7.3.0
+    '@stylistic/eslint-plugin': ^5.4.0
+    '@typescript-eslint/eslint-plugin': ^8.44.1
+    '@typescript-eslint/parser': ^8.44.1
+    '@vitest/eslint-plugin': ^1.3.12
     eslint-config-flat-gitignore: ^2.1.0
-    eslint-flat-config-utils: ^2.1.1
+    eslint-flat-config-utils: ^2.1.4
     eslint-merge-processors: ^2.0.0
     eslint-parser-plain: ^0.1.1
     eslint-plugin-antfu: ^3.1.1
     eslint-plugin-import-lite: ^0.3.0
-    eslint-plugin-jsdoc: ^54.7.0
+    eslint-plugin-jsdoc: ^60.3.0
     eslint-plugin-jsonc: ^2.20.1
-    eslint-plugin-n: ^17.21.3
+    eslint-plugin-n: ^17.23.1
     eslint-plugin-no-only-tests: ^3.3.0
     eslint-plugin-perfectionist: ^4.15.0
-    eslint-plugin-pnpm: ^1.1.1
+    eslint-plugin-pnpm: ^1.1.2
     eslint-plugin-regexp: ^2.10.0
     eslint-plugin-toml: ^0.12.0
     eslint-plugin-unicorn: ^61.0.2
     eslint-plugin-unused-imports: ^4.2.0
-    eslint-plugin-vue: ^10.4.0
+    eslint-plugin-vue: ^10.5.0
     eslint-plugin-yml: ^1.18.0
     eslint-processor-vue-blocks: ^2.0.0
-    globals: ^16.3.0
-    jsonc-eslint-parser: ^2.4.0
+    globals: ^16.4.0
+    jsonc-eslint-parser: ^2.4.1
     local-pkg: ^1.1.2
     prompts: ^2.4.2
     toml-eslint-parser: ^0.10.0
@@ -78,7 +78,9 @@ catalogs:
     vitest: ^3.2.4
 
 onlyBuiltDependencies:
+  - esbuild
   - simple-git-hooks
+
 peerDependencyRules:
   ignoreMissing:
     - prettier
