--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "pnpm run stub && eslint .",
     "lint:fix": "eslint . --fix",
     "lint:ts": "tsc --noEmit",
-    "prepare": "npx simple-git-hooks"
+    "prepare[-del]": "npx simple-git-hooks"
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.15.0",
@@ -139,10 +139,10 @@
     "vitest": "catalog:test",
     "vue": "catalog:peer"
   },
-  "simple-git-hooks": {
+  "simple-git-hooks[-del]": {
     "pre-commit": "npx lint-staged"
   },
-  "lint-staged": {
+  "lint-staged[-del]": {
     "*.{[jt]s?(x),vue,md}": "eslint --fix"
   },
   "publishConfig": {
